# vnl-experiments

./: .gitignore  README.md  measure_net_size.py  pyproject.toml  render_example_video.sh  slurm_distillation.sh  slurm_run.sh
benchmarking/: benchmark_results.json  benchmark_results_delays.json  benchmark_training_curves.json  plot_benchmark.ipynb
modular/: dense_mlp.py  independent_nervenet.py  mlp_multi_heads.py  nervenet_mlp_critic.py
networks/: nervenet_style.py  nervenet_style_test.py
non-modular/: basic_mlp.py  enc_dec.py  lstm_decoder.py
vnl_experiments/distillation/: delay_distillation.py  train.py
vnl_experiments/envs/: joystick_env.py
vnl_experiments/modular/: action_delays.py  dense_mlp.py  independent_nervenet.py  mlp_multi_critic.py  mlp_multi_heads.py  nervenet_mlp_critic.py  nervenet_v2_test.py  nervenet_v3_test.py  nervenet_v4_test.py  profile_nervenet.py  recurrent_modular.py
vnl_experiments/networks/: mlp_modular.py  nervenet_style.py  nervenet_style_test.py  nervenet_style_v2.py  nervenet_style_v3.py  nervenet_style_v4.py  recurrent_modular.py  rnn_modular.py
vnl_experiments/non-modular/: basic_mlp.py  enc_dec.py  lstm_decoder.py
vnl_experiments/tools/: benchmark_all_checkpoints.py  benchmark_checkpoints.py  camera_matched_rollout.py  checkpoint_utils.py  eval_checkpoint.py  gamepad_test.py  gamepad_viewer.py  policy_viewer.py
vnl_experiments/wrappers/: __init__.py  action_delay.py  action_delay_test.py  obs_delay.py
